--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +9,7 @@
     "antd": "^5.1.6",
     "aos": "^2.3.4",
     "axios": "^1.2.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -42,9 +42,5 @@
       "last 1 safari version"
     ]
   },
-  
-  "options.allowedHosts": [
-    "http://localhost:5000"
-  ]
-  
+  "proxy": "http://localhost:5000/"
 }
